[package]
name = "libraw-sys"
version = "0.1.1"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "FFI bindings to libraw"
homepage = "https://github.com/dcuddeback/libraw-sys"
repository = "https://github.com/dcuddeback/libraw-sys"
license = "MIT"
readme = "README.md"
keywords = ["libraw", "raw", "camera"]

build = "build.rs"
links = "raw"

[dependencies]
libc = "0.2"

[build-dependencies]
conan2 = "0.1"
cc = "1"
home = "0.5"
pkg-config = "0.3"
walkdir = "2"